--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,55 @@
     <header class="header" role="banner">
     </header>
     <main class="main" role="main">
-      <p>Your content goes here</p>
+      <section id="gallery">
+        <p>Enter the</p>
+        <h1>My Away</h1>
+        <p>in the USA Instagram Photo Contest</p>
+        <hr />
+        <hr />
+        <p>#MYAWAYContest</p>
+      </section>
+      <section id="enter">
+        <h1>How to Enter</h1>
+        <div>
+          <h2>Capture It</h2>
+          <hr />
+          <p> Snap photos of a view of nature, landscapes, national or state parks, or wherever the great outdoors takes you. </p>
+        </div>
+        <div>
+          <h2>Share It</h2>
+          <hr />
+          <p> Upload your best images to Instagram from June 1 - June 30, 2016 with #MyAwayContest and a caption that tells how you found it. </p>
+        </div>
+        <div>
+          <h2>Win It</h2>
+          <hr />
+          <p> Winner will be announced in mid August, so be sure to bookmark this page and check back in with us to view the grand prize-winning image! </p>
+        </div>
+        <a>View Official Rules</a>
+      </section>
+      <section id="prize">
+        <h1>You could win a Fujifilm X-T10 camera package</h1>
+        <hr />
+        <p> With an amazing camera package that includes a Fujifilm X-T10 Black Mirrorless Digital Camera, plus accessories from National Geographic and Go RVing, you'll have everything you need to capture your next adventure. </p>
+      </section>
+      <section>
+        <div id="judge">
+          <h2>Meet the Judge</h2>
+          <a>Read Bio</a>
+        </div>
+        <div id="video">
+          <h2>A Day of Firsts</h2>
+          <button></button>
+          <a>Watch Video</a>
+        </div>
+      </section>
+      <section id="about">
+        <h1>About Away</h1>
+        <hr />
+        <p> Adventures. Memories. Wonders. Each other. It’s amazing what you find when you find your AWAY. </p>
+        <a>Go to away.gorving.com</a>
+      </section>
     </main>
     <footer class="footer" role="contentinfo">
     </footer>
