--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
         <img src="../assets/img/rule-big-copy_2.png" class="rule-big" />
       </section>
       <section id="prize">
+        <img src="../assets/img/camera.jpg" srcset="../assets/img/camera.jpg, ../assets/img/camera@2x.jpg, ../assets/img/camera@3x.jpg" />
         <h1>You could win a Fujifilm X-T10 camera package</h1>
         <hr />
         <p> With an amazing camera package that includes a Fujifilm X-T10 Black Mirrorless Digital Camera, plus accessories from National Geographic and Go RVing, you'll have everything you need to capture your next adventure. </p>
